<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/planoDeFundo"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_span="2"
                android:gravity="center"
                android:textSize="20pt"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20pt">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Novo usuario:"
                android:layout_span="2"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="12pt"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:layout_marginLeft="5pt"
                android:textColor="#000000"
                android:textSize="8pt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5pt"
                android:id="@+id/nome" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="5pt"
                android:textColor="#000000"
                android:textSize="8pt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5pt"
                android:id="@+id/email" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:layout_marginLeft="5pt"
                android:textColor="#000000"
                android:textSize="8pt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5pt"
                android:id="@+id/usuario" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"
                android:layout_marginLeft="5pt"
                android:textColor="#000000"
                android:textSize="8pt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginRight="5pt"
                android:id="@+id/senha" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/status"
                android:textColor="#000000"
                android:layout_span="2"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:gravity="center"
        android:id="@+id/btnCadastrar"
        android:text="@string/cadastrar"
        android:onClick="cadastrar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="5pt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical">
            <!-- BOTAO: voltar -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/margem"
                android:layout_marginRight="@dimen/margem"
                android:gravity="center"
                android:id="@+id/btnVoltar"
                android:text="@string/voltar"
                android:onClick="voltar" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>